--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -51,3 +51,19 @@ body,
     }
   }
 }
+
+.pdf-export {
+  font-family: 'Arial, sans-serif'; 
+  color: #000;
+  background: #fff;
+}
+
+.pdf-export h3 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.pdf-export .totalBox {
+  font-size: 16px;
+  font-weight: bold;
+}
